--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@popperjs/core": "2.11.7",
     "@reduxjs/toolkit": "1.9.5",
     "apexcharts-clevision": "3.28.5",
-    "axios": "^1.4.0",
+    "axios": "^1.6.2",
     "axios-mock-adapter": "1.21.4",
     "babel-eslint": "10.1.0",
     "bootstrap-icons": "1.10.5",
@@ -73,6 +73,7 @@
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-redux": "8.0.5",
+    "react-router-dom": "^6.18.0",
     "recharts": "2.5.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
