--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,1 +1,9 @@
-{"compilerOptions":{"baseUrl":"."},"include":["src"]}
+{
+    "compilerOptions": {
+        "baseUrl": "."
+    },
+    "include": [
+        "src",
+        "server/index.js"
+    ]
+}
