--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cleave.js": "1.6.0",
     "clipboard-copy": "4.0.1",
     "clsx": "1.2.1",
+    "cors": "^2.8.5",
     "date-fns": "2.30.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
@@ -58,6 +59,7 @@
     "jsonwebtoken": "^8.5.1",
     "keen-slider": "6.8.5",
     "mongoose": "^8.0.3",
+    "net": "^1.0.2",
     "next": "13.3.2",
     "nprogress": "0.2.0",
     "payment": "2.4.6",
@@ -111,5 +113,8 @@
     "react-credit-cards": {
       "react": "$react"
     }
+  },
+  "browser": {
+    "fs": false
   }
 }
